fix: content overflow in width

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -82,11 +82,9 @@ main {
   letter-spacing: 1;
   border-radius: 10px;
   width: 100%;
-  white-space: pre-wrap;
-  word-wrap: break-word;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   overflow: hidden;
   z-index: 2;
   color: $text;
@@ -95,8 +93,12 @@ main {
     padding: 8px;
   }
 
-  span {
+  span.content-text {
     font-family: CommitMono !important;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    word-break: break-word;
+    max-width: 100%;
   }
 
   .image {
